
Allow .Z80 corrupted snapshot loading from ZXSP emulator with additional header of 31 byte size
Added ZSF support for Timex TS2068
Added setting for path where to download files from the speccy and zx81 online browser
Added machine Spectrum 48k+
Added machine Timex TC2048
Added machine Timex TC2068
Added machine TK95 Spanish
Added machine Timex TS1000
Added disk image browsing from storage MMC/IDE menus
Added PZX load support as standard tape
Added TAP to PZX converter
Added TAP to TZX turbo converter (TZX Turbo 4000 bauds, to use with Rodolfo Guerra ROMS)
Added some actions than can be fired from command line and don't start ZEsarUX:
--convert-tap-tzx, --convert-tap-tzx-turbo-rg, --convert-tap-pzx , --convert-tzx-tap, --convert-pzx-tap


Improved ZX Spectrum Next emulation: added sprite rendering priority bit
Improved ZRCP: allow to change command prompt
Improved generated TZX and PZX files: include date and ZEsarUX version in header
Improved Custom machine menu: added +2E MMC machine

Improved File selector: 
-Allow to have a full screen preview if window is big enough
-Better legend key explanation

Improved Debugging: 
-Added a setting to show on which scanline has been executed a Halt, inverting border color
-When enabling step mode, emulation is paused on all menus
-Preserve step mode when exiting debug cpu that was opened by breakpoint
-When a breakpoint is fired, step mode is kept on all menus
-Breakpoints actions "call", "printc", "set-register" and "write" can now use expressions instead of fixed values
-Added breakpoint actions: "disassemble", "printregs"
-Warn on footer when step mode
-Enlarge width of breakpoints list

Improved SmartLoad & Drag-Drop: 
-Allow to load a .rom file as a custom rom file for the current machine
-Allow to Drag-Drop when menu open

Improved ZX Vision:
-Reorder windows when changing machine but only when ZEsarUX window is smaller than previous one
-Custom arrows characters